@@ -1,3 +1,11 @@
+Mon Feb  2 14:42:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/ZIOP/ZIOP.cpp:
+          Added missing include
+
+        * tao/Transport_Cache_Manager_T.h:
+          Doxygen change
+
 Mon Feb  2 13:30:17 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/PortableServer/Root_POA.cpp (check_for_valid_wait_for_completions):
